mudando nome da class html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</div>
 		</nav>
 		<section class="produtos">
-			<div class="botao"></div>
+			<div class="titulo-produto"></div>
 			<div class="div-produto">
 				
 			</div>
