subindo produtos do site do juca

--- a/index.html
+++ b/index.html
@@ -19,10 +19,31 @@
 				</ul>
 			</div>
 		</nav>
-		<section class="produtos">
-			<div class="titulo-produto"></div>
-			<div class="div-produto">
-				
+		<section class="banner-container">
+				<div class="div-sombra-banner"></div>
+				<div class="div-descricao-banner-sombra"></div>
+				<div class="div-descricao-texto" >
+					<p class="titulo-desc-banner">Novo consolo do Sex Shop do Juca</p>
+					<p class="texto-desc-banner"> lorem ipsumLorem ipsum Ut proident laborum velit ullamco magna. Lorem ipsum Veniam aliqua Excepteur cillum eu laboris incididunt aliqua sint. Lorem ipsum Quis in pariatur reprehenderit consectetur in elit exercitation tempor non nisi reprehenderit dolore. 
+					</p>					
+				</div>
+				<div class ="div-separador-titulo-descricao" ></div>
+			<div class="div-banner">
+				<img class="img-banner" src="images/banner.fw.png" alt="">
+			</div>
+		</section>
+		<section class="produtos-destaque-container" >
+			<div class="div-titulo-produtos-destaque" ></div>
+			<div class="div-titulo-produtos-1" ></div>
+			<div class="div-titulo-produtos-2" ></div>
+			<div class = "div-titulo-produtos-destaque-texto" >Produtos em destaque</div>
+			<div class="div-produtos-destaque">
+				<div class="produto-1" >
+					<img class="img-produto-1" src="images/produto-anel.fw.png" alt="produto-anel">
+					<div class="div-texto-titulo-produto-1" >Anel peniano do Juca</div>
+					<div class="div-texto-produto-1" ></div>
+				</div>
+
 			</div>
 		</section>
 	</body>
