subindo a parte de servicos e produtos do site

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<p class="texto-desc-banner"> lorem ipsumLorem ipsum Ut proident laborum velit ullamco magna. Lorem ipsum Veniam aliqua Excepteur cillum eu laboris incididunt aliqua sint. Lorem ipsum Quis in pariatur reprehenderit consectetur in elit exercitation tempor non nisi reprehenderit dolore. 
 					</p>					
 				</div>
-				<div class ="div-separador-titulo-descricao" ></div>
+			<div class ="div-separador-titulo-descricao" ></div>
 			<div class="div-banner">
 				<img class="img-banner" src="images/banner.fw.png" alt="">
 			</div>
@@ -37,14 +37,61 @@
 			<div class="div-titulo-produtos-1" ></div>
 			<div class="div-titulo-produtos-2" ></div>
 			<div class = "div-titulo-produtos-destaque-texto" >Produtos em destaque</div>
-			<div class="div-produtos-destaque">
-				<div class="produto-1" >
-					<img class="img-produto-1" src="images/produto-anel.fw.png" alt="produto-anel">
-					<div class="div-texto-titulo-produto-1" >Anel peniano do Juca</div>
-					<div class="div-texto-produto-1" ></div>
+			<div class="div-produtos" >
+				<div class="div-produtos-destaque">
+					<div class="produto" >
+						<img class="img-produto" src="images/produto-anel.fw.png" alt="produto-anel">
+						<div class="div-texto-titulo-produto" >Anel peniano do Juca</div>
+						<div class="div-texto-produto" >Lorem ipsum Aliqua minim sed in officia deserunt eu sit. Lorem ipsum Dolor ea esse elit amet exercitation eu cupidatat officia. Lorem ipsum Dolor commodo in qui incididunt culpa.
+						</div>
+					</div>
 				</div>
-
+				<div class="div-produtos-destaque">
+					<div class="produto-1" >
+						<img class="img-produto" src="images/produto-boneca.fw.jpg" alt="produto-anel">
+						<div class="div-texto-titulo-produto" >Boneca inflável do Juca</div>
+						<div class="div-texto-produto" >Lorem ipsum Aliqua minim sed in officia deserunt eu sit. Lorem ipsum Dolor ea esse elit amet exercitation eu cupidatat officia. Lorem ipsum Dolor commodo in qui incididunt culpa.
+						</div>
+					</div>
+				</div>
+				<div class="div-produtos-destaque">
+					<div class="produto-2" >
+						<img class="img-produto" src="images/produto-oleo-fw.fw.jpg" alt="produto-anel">
+						<div class="div-texto-titulo-produto" >Óleo anestésico do Juca</div>
+						<div class="div-texto-produto" >Lorem ipsum Aliqua minim sed in officia deserunt eu sit. Lorem ipsum Dolor ea esse elit amet exercitation eu cupidatat officia. Lorem ipsum Dolor commodo in qui incididunt culpa.
+						</div>
+					</div>
+				</div>
 			</div>
+		</section>
+		<div class="div-separador-servico" ></div>
+		<section class="servico-container" >
+			<div class="div-titulo-servico-1" >
+				<div class = "div-titulo-servico-texto" >Conheça nossos serviços</div>
+			</div>
+			<div class="div-titulo-servico-2" ></div>
+			<div class="div-servico">
+				<div class="div-servico-1">
+					<img  class="img-servico" src="/home/workspace/Site/site-juca-sexshop/images/servico-domicilio.fw.png" alt="imagem-servico">
+					<div class="div-titulo-servico" >Visita a domicílio</div>
+					<div class="div-texto-servico" >Lorem ipsum Esse reprehenderit do ad voluptate labore enim do ea laborum qui. Lorem ipsum Duis elit ut est voluptate nostrud Ut ullamco consequat esse nostrud Excepteur quis. Lorem ipsum Elit culpa nisi est sint quis minim nisi veniam. Lorem ipsum Reprehenderit pariatur occaecat est nisi labore in dolor est id consequat sint. Lorem ipsum Dolore incididunt Duis nisi eiusmod sint id ex sint.
+					</div>
+				</div>
+				<div class="div-servico-1">
+					<img  class="img-servico" src="images/servico-massagem.fw.png" alt="imagem-servico">
+					<div class="div-titulo-servico" >Massagem do Juca</div>
+					<div class="div-texto-servico" >Lorem ipsum Esse reprehenderit do ad voluptate labore enim do ea laborum qui. Lorem ipsum Duis elit ut est voluptate nostrud Ut ullamco consequat esse nostrud Excepteur quis. Lorem ipsum Elit culpa nisi est sint quis minim nisi veniam. Lorem ipsum Reprehenderit pariatur occaecat est nisi labore in dolor est id consequat sint. Lorem ipsum Dolore incididunt Duis nisi eiusmod sint id ex sint.
+					</div>
+				</div>
+			</div>
+		</section>
+		<div class="div-separador-contato" ></div>
+		<section class="contato-container" >
+			<div class="div-titulo-contato-1" >
+				<div class = "div-titulo-contato-texto" >Entre em contato	</div>
+			</div>
+			<div class="div-titulo-contato-2" ></div>
+			
 		</section>
 	</body>
 </html>
