finalizando a parte de contato

--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
 		</nav>
 		<section class="banner-container">
 				<div class="div-sombra-banner"></div>
-				<div class="div-descricao-banner-sombra"></div>
-				<div class="div-descricao-texto" >
-					<p class="titulo-desc-banner">Novo consolo do Sex Shop do Juca</p>
-					<p class="texto-desc-banner"> lorem ipsumLorem ipsum Ut proident laborum velit ullamco magna. Lorem ipsum Veniam aliqua Excepteur cillum eu laboris incididunt aliqua sint. Lorem ipsum Quis in pariatur reprehenderit consectetur in elit exercitation tempor non nisi reprehenderit dolore. 
-					</p>					
+				<div class="div-descricao-banner-sombra">
+					<div >
+						<h2 class="titulo-desc-banner">Novo consolo do Sex Shop do Juca</h2>
+						<div class ="div-separador-titulo-descricao" ></div>
+						<p class="texto-desc-banner"> lorem ipsumLorem ipsum Ut proident laborum velit ullamco magna. Lorem ipsum Veniam aliqua Excepteur cillum eu laboris incididunt aliqua sint. Lorem ipsum Quis in pariatur reprehenderit consectetur in elit exercitation tempor non nisi reprehenderit dolore. 
+						</p>					
+					</div>
+
 				</div>
-			<div class ="div-separador-titulo-descricao" ></div>
+				
 			<div class="div-banner">
 				<img class="img-banner" src="images/banner.fw.png" alt="">
 			</div>
@@ -91,7 +94,23 @@
 				<div class = "div-titulo-contato-texto" >Entre em contato	</div>
 			</div>
 			<div class="div-titulo-contato-2" ></div>
-			
+			<div class="div-formulario-geral" >
+				<div class="div-formulario">
+					<input class="edit" type="text" name="name" placeholder="Nome">
+					<input class="edit" type="text" name="name" placeholder="Email">
+					<input class="edit" type="text" name="name" placeholder="Assunto">
+					<input class="mensagem" type="text" name="name" placeholder="Mensagem">
+					<input class="botao" type="button" value="Enviar">
+				</div>
+				<div class="div-image-map">
+					<img src="images/image-map.fw.jpg" alt="image-map">
+					<div class="div-opacity-telefone" >
+						<div class="div-numero-telefone">Tel.: (11) 9999-9999</div>
+					</div>
+					
+				</div>
+			</div>
 		</section>
 	</body>
+	<footer class="footer"> Marcos-2015</footer>
 </html>
