--- a/site-juca-sexshop-responsive/index.html
+++ b/site-juca-sexshop-responsive/index.html
@@ -4,17 +4,55 @@
 		<meta charset="UTF-8">
 		<title>Sex Shop do Juca</title>
 		<link rel="stylesheet" href="style.css">
-		<nav class="nav">
-			<div class="div-logo">
-				<img src="images/logo.png" alt="">
-			</div>
-
-			<div class="div-menu">
-				<ul class="menu">
-					<li><div class="menu-item"><a href="#"><img src="images/hamburger.fw.png" alt=""></a></div></li>
-				</ul>
-			</div>
-		</nav>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	</head>
 	<body>
+		<header class="header">
+			<div class="div-logo">
+				<img src="images/mobile/logo.png" alt="" id="logo">
+			</div>
+			<div class="div-hamburger">
+				<img src="images/hamburger.fw.png"alt="">
+			</div>
+		</header>
+		<nav class="nav">
+			<ul class="menu">
+				<li class="menu-item">
+					<a href="#">Home</a>
+				</li>
+				<li class="menu-item">
+					<a href="#">Serviços</a>
+				</li>
+				<li class="menu-item">
+					<a href="#">Produtos</a>
+				</li>
+				<li class="menu-item">
+					<a href="#">Contato</a>
+				</li>
+			</ul>
+		</nav>
+		<script>
+		function onresize() {
+			var windowWidth = screen.width;
+			var device = 'mobile';
+
+			if (windowWidth > 800) {
+				device = 'desktop';
+			}
+			
+			alterarImagens(device);
+
+			console.log(windowWidth);	
+			console.log(device);	
+		}
+
+		function alterarImagens(device) {
+			var logo = document.getElementById("logo");
+			logo.setAttribute('src', 'images/' + device + '/logo.png');
+		}
+
+		window.addEventListener("resize", onresize)
+
+		</script>
+	</body>
 </html>
