--- a/site-juca-sexshop-responsive/index.html
+++ b/site-juca-sexshop-responsive/index.html
@@ -36,17 +36,18 @@
 			<div class="div-banner">
 				<img id="banner" class="img-banner" src="images/mobile/banner.jpg" alt="">
 			</div>
-				<div class="div-descricao-container"></div>
-			<div class="div-texto-descricao">
-				<div class="div-titulo-banner">
-					Novo consolo do Sex Shop do Juca
+			<div class="div-descricao-container">
+				<div class="div-texto-descricao">
+					<div class="div-titulo-banner">
+						Novo consolo do Sex Shop do Juca
+					</div>
+					<div class="div-separador"></div>
+					<div class="div-texto-banner">
+					<p>
+						Lorem ipsum Officia cupidatat consectetur enim ad adipisicing cupidatat cupidatat Excepteur veniam consequat do consectetur. Lorem ipsum Labore incididunt cupidatat veniam non reprehenderit adipisicing irure tempor.
+					</p>			
 				</div>
-				<div class="div-separador"></div>
-				<div class="div-texto-banner">
-				<p>
-					Lorem ipsum Officia cupidatat consectetur enim ad adipisicing cupidatat cupidatat Excepteur veniam consequat do consectetur. Lorem ipsum Labore incididunt cupidatat veniam non reprehenderit adipisicing irure tempor.
-				</p>			
-				</div>
+			</div>
 			</div>
 		</section>
 		<footer>
