subindo secao de produtos

--- a/site-juca-sexshop-responsive/index.html
+++ b/site-juca-sexshop-responsive/index.html
@@ -39,15 +39,64 @@
 			<div class="div-descricao-container">
 				<div class="div-texto-descricao">
 					<div class="div-titulo-banner">
-						Novo consolo do Sex Shop do Juca
+						<p>
+							Novo consolo do Sex Shop do Juca
+						</p>
 					</div>
 					<div class="div-separador"></div>
 					<div class="div-texto-banner">
-					<p>
-						Lorem ipsum Officia cupidatat consectetur enim ad adipisicing cupidatat cupidatat Excepteur veniam consequat do consectetur. Lorem ipsum Labore incididunt cupidatat veniam non reprehenderit adipisicing irure tempor.
-					</p>			
+						<p>
+							Lorem ipsum Officia cupidatat consectetur enim ad adipisicing cupidatat cupidatat Excepteur veniam consequat do consectetur. Lorem ipsum Labore incididunt cupidatat veniam non reprehenderit adipisicing irure tempor.
+						</p>			
+					</div>
 				</div>
 			</div>
+		</section>
+			<div class="titulo-container">
+				<div class="div-titulo-produto">
+					<p>Produtos em destaque</p>
+				</div>
+				<div clas="titulo-container-2"></div>
+			</div>
+		<section class="produtos-container">
+			<div class="div-produto">
+				<img src="/home/workspace/Site/site-juca-sexshop/site-juca-sexshop-responsive/images/produto-anel.jpg" alt="produto">
+				<div class="titulo-texto-produto">
+					<p>
+						Anel Peniano do Juca	
+					</p>
+				</div>
+				<div class="texto-produto">
+					<p>
+						Lorem ipsum Incididunt occaecat in Duis ut dolore proident. Lorem ipsum Et labore veniam in proident ut. Lorem ipsum Sint tempor esse ad officia tempor ea consectetur sunt.
+					</p>
+				</div>
+			</div>
+			<div class="div-produto">
+				<img src="/home/workspace/Site/site-juca-sexshop/site-juca-sexshop-responsive/images/produto-boneca.jpg" alt="produto">
+				<div class="titulo-texto-produto">
+					<p>
+						Boneca Inflável do Juca
+					</p>
+				</div>
+				<div class="texto-produto">
+					<p>
+						Lorem ipsum Incididunt occaecat in Duis ut dolore proident. Lorem ipsum Et labore veniam in proident ut. Lorem ipsum Sint tempor esse ad officia tempor ea consectetur sunt.
+					</p>
+				</div>
+			</div>
+			<div class="div-produto">
+				<img src="/home/workspace/Site/site-juca-sexshop/site-juca-sexshop-responsive/images/produto-oleo.jpg" alt="produto">
+				<div class="titulo-texto-produto">
+					<p>
+						Óleo Anestéscio do Juca
+					</p>
+				</div>
+				<div class="texto-produto">
+					<p>
+						Lorem ipsum Incididunt occaecat in Duis ut dolore proident. Lorem ipsum Et labore veniam in proident ut. Lorem ipsum Sint tempor esse ad officia tempor ea consectetur sunt.
+					</p>
+				</div>
 			</div>
 		</section>
 		<footer>
