subindo a secao de servicos e contato

--- a/site-juca-sexshop-responsive/index.html
+++ b/site-juca-sexshop-responsive/index.html
@@ -14,23 +14,23 @@
 			<div class="div-hamburger" onclick="menu()">
 				<img src="images/hamburger.fw.png" alt="">
 			</div>
+			<nav class="nav" id="nav">
+				<ul class="menu">
+					<li class="menu-item">
+						<a href="#">Home</a>
+					</li>
+					<li class="menu-item">
+						<a href="#">Serviços</a>
+					</li>
+					<li class="menu-item">
+						<a href="#">Produtos</a>
+					</li>
+					<li class="menu-item">
+						<a href="#">Contato</a>
+					</li>
+				</ul>
+			</nav>
 		</header>
-		<nav class="nav" id="nav">
-			<ul class="menu">
-				<li class="menu-item">
-					<a href="#">Home</a>
-				</li>
-				<li class="menu-item">
-					<a href="#">Serviços</a>
-				</li>
-				<li class="menu-item">
-					<a href="#">Produtos</a>
-				</li>
-				<li class="menu-item">
-					<a href="#">Contato</a>
-				</li>
-			</ul>
-		</nav>
 		<section class="banner-container">
 			<div class="div-sombra-banner"></div>
 			<div class="div-banner">
@@ -52,12 +52,12 @@
 				</div>
 			</div>
 		</section>
-			<div class="titulo-container">
-				<div class="div-titulo-produto">
-					<p>Produtos em destaque</p>
-				</div>
-				<div clas="titulo-container-2"></div>
+		<section class="titulo-container">
+			<div class="div-titulo-container">
+				<p>Produtos em destaque</p>
 			</div>
+			<div class="div-titulo-container-2"></div>
+		</section>
 		<section class="produtos-container">
 			<div class="div-produto">
 				<img src="/home/workspace/Site/site-juca-sexshop/site-juca-sexshop-responsive/images/produto-anel.jpg" alt="produto">
@@ -96,6 +96,80 @@
 					<p>
 						Lorem ipsum Incididunt occaecat in Duis ut dolore proident. Lorem ipsum Et labore veniam in proident ut. Lorem ipsum Sint tempor esse ad officia tempor ea consectetur sunt.
 					</p>
+				</div>
+			</div>
+		</section>
+		<section class="separador-container">
+			<div class="div-separador-container"></div>
+		</section>
+		<section class="titulo-container">
+			<div class="div-titulo-container">
+				<p>Conheça nossos serviços</p>
+			</div>
+			<div class="div-titulo-container-2"></div>
+		</section>
+		<section class="servicos-container">
+			<div class="div-servico	">
+				<div class="img-container">
+					<img src="/home/workspace/Site/site-juca-sexshop/site-juca-sexshop-responsive/images/servico-domicilio.jpg" alt="servico">
+				</div>
+					<div class="texto-container">	
+					<div class="div-titulo-texto-servico">
+						<p>
+							Visita a domicílio
+						</p>	
+					</div>
+					<div class="div-texto-servico">
+						<p>
+							Lorem ipsum Tempor minim cupidatat dolore nostrud adipisicing eiusmod eiusmod dolore irure. Lorem ipsum Culpa ullamco ea commodo sit occaecat. Lorem ipsum Enim ut in incididunt commodo ut est voluptate. Lorem ipsum Amet minim do ut sunt sed quis magna laboris.
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="div-servico">
+				<div class="img-container">
+					<img src="/home/workspace/Site/site-juca-sexshop/site-juca-sexshop-responsive/images/servico-massagem.jpg" alt="servico">
+				</div>
+				<div class="texto-container">
+					<div class="div-titulo-texto-servico">
+						<p>
+							Massagem do Juca
+						</p>	
+					</div>
+					<div class="div-texto-servico">
+						<p>
+							Lorem ipsum Tempor minim cupidatat dolore nostrud adipisicing eiusmod eiusmod dolore irure. Lorem ipsum Culpa ullamco ea commodo sit occaecat. Lorem ipsum Enim ut in incididunt commodo ut est voluptate. Lorem ipsum Amet minim do ut sunt sed quis magna laboris.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="separador-container">
+			<div class="div-separador-container"></div>
+		</section>
+		<section class="titulo-container">
+			<div class="div-titulo-container">
+				<p>Entre em contato</p>
+			</div>
+			<div class="div-titulo-container-2"></div>
+		</section>
+		<section class="contato-container">
+			<div class="div-contato">
+				<div class="div-formulario">
+					<div class="div-campo-formulario">
+						<type="text" name="nome" placeholder="Nome">
+					</div>
+					<div class="div-campo-formulario">
+						<input type="text" name="email" placeholder="Email">
+					</div>
+					<div class="div-campo-formulario">
+						<input type="text" name="name" placeholder="Assunto">
+					</div>
+					<div class="div-mensagem-formulario">
+					<textarea name="message" rows="10" cols="30" placeholder="Assunto"></textarea>			
+					</div>
+				</div>
+				<div class="div-mapa">	
 				</div>
 			</div>
 		</section>
