--- a/site-juca-sexshop-responsive/index.html
+++ b/site-juca-sexshop-responsive/index.html
@@ -60,7 +60,7 @@
 		</section>
 		<section class="produtos-container">
 			<div class="div-produto">
-				<img src="/home/workspace/Site/site-juca-sexshop/site-juca-sexshop-responsive/images/produto-anel.jpg" alt="produto">
+				<img src="images/produto-anel.jpg" alt="produto">
 				<div class="titulo-texto-produto">
 					<p>
 						Anel Peniano do Juca	
@@ -73,7 +73,7 @@
 				</div>
 			</div>
 			<div class="div-produto">
-				<img src="/home/workspace/Site/site-juca-sexshop/site-juca-sexshop-responsive/images/produto-boneca.jpg" alt="produto">
+				<img src="images/produto-boneca.jpg" alt="produto">
 				<div class="titulo-texto-produto">
 					<p>
 						Boneca Inflável do Juca
@@ -86,7 +86,7 @@
 				</div>
 			</div>
 			<div class="div-produto">
-				<img src="/home/workspace/Site/site-juca-sexshop/site-juca-sexshop-responsive/images/produto-oleo.jpg" alt="produto">
+				<img src="images/produto-oleo.jpg" alt="produto">
 				<div class="titulo-texto-produto">
 					<p>
 						Óleo Anestéscio do Juca
@@ -111,7 +111,7 @@
 		<section class="servicos-container">
 			<div class="div-servico	">
 				<div class="img-container">
-					<img src="/home/workspace/Site/site-juca-sexshop/site-juca-sexshop-responsive/images/servico-domicilio.jpg" alt="servico">
+					<img src="images/servico-domicilio.jpg" alt="servico">
 				</div>
 					<div class="texto-container">	
 					<div class="div-titulo-texto-servico">
@@ -128,7 +128,7 @@
 			</div>
 			<div class="div-servico">
 				<div class="img-container">
-					<img src="/home/workspace/Site/site-juca-sexshop/site-juca-sexshop-responsive/images/servico-massagem.jpg" alt="servico">
+					<img src="images/servico-massagem.jpg" alt="servico">
 				</div>
 				<div class="texto-container">
 					<div class="div-titulo-texto-servico">
@@ -156,24 +156,35 @@
 		<section class="contato-container">
 			<div class="div-contato">
 				<div class="div-formulario">
-					<div class="div-campo-formulario">
-						<type="text" name="nome" placeholder="Nome">
+					<div class="div-formulario-nome-email">
+						<div class="div-campo-formulario">
+							<input type="text" name="nome" placeholder="Nome">
+						</div>
+						<div class="div-campo-formulario">
+							<input type="text" name="email" placeholder="Email">
+						</div>
 					</div>
 					<div class="div-campo-formulario">
-						<input type="text" name="email" placeholder="Email">
-					</div>
-					<div class="div-campo-formulario">
-						<input type="text" name="name" placeholder="Assunto">
+						<input type="text" name="Assunto" placeholder="Assunto">
 					</div>
 					<div class="div-mensagem-formulario">
-					<textarea name="message" rows="10" cols="30" placeholder="Assunto"></textarea>			
+						<textarea name="message" rows="10" cols="30" placeholder="Mensagem"></textarea>
 					</div>
+					<div class="div-botao">
+						<input type="button" name="enviar" value="Enviar">
+					</div>	
 				</div>
 				<div class="div-mapa">	
+					<img src="images/mapa.jpg">
+					<div class="sombra-mapa"></div>
+					<div class="div-telefone-mapa">
+						<p>Tel	:.11 9999 9999</p>
+					</div>
 				</div>
 			</div>
 		</section>
-		<footer>
+		<footer class="footer">
+			<p>Marcos 2015</p>
 		</footer>
 		<script src="script/script.js" ></script>
 		<script src="script/menu.js" ></script>
